            .MapConventionOverridesFromAssemblyOf<YourEntityClassMapName>();
6) Update YourProject.Web/Views/web.config to reflect the respective content from the Northwind sample project
7) Within YourProject.Web/Global.asax.cs, change the following line:
	container.RegisterControllersByArea(typeof(HomeController).Assembly);
   to:
	container.RegisterControllers(typeof(HomeController).Assembly);
8) Within YourProject.Tests/App.config, update the nunit assembly redirect to go to version 2.4.8.0
#) Change calls to EntityIdSetter<>.SetIdOf() to EntityIdSetter.SetIdOf<>()
#) Update your Site.master to provide an overwritable title and to account for a known bug in MVC RC 1, described at http://haacked.com/archive/2009/01/27/controls-collection-cannot-be-modified-issue-with-asp.net-mvc-rc1.aspx
#) Either replace your CrudScaffolding project with a duplicate of the one from the Northwind project or use the guidance discussed in the below change log for modifications
#) (Optional) Add the following line to Global.asax.cs to Application_Start if you're client side code looks for dot-notation in generated input names:
	HtmlHelper.IdAttributeDotReplacement = ".";
#) (Optional) Add Northwind.Web/Scripts/jquery-1.2.6.min-vsdoc.js and jquery-1.2.6-vsdoc.js to your project to enable jQuery IntelliSense
#) (Optional) Get rid of the code behind pages in favor of ViewMasterPage, ViewPage<Whatever>, ViewUserControl<Whatever> inheritance in the view's Master/Page/Control declaration.  E.g.: Inherits="System.Web.Mvc.ViewPage<Employee>".  Be sure to include System.Web.Mvc before ViewPage and either move your domain imports ABOVE the page declaration or fully qualify the namespaces of your model object.
#) (Optional) Add MvcBuildViews to YourProject.Web.csproj and alter the Target/AfterBuild, following the details in the ASP.NET MVC RC release notes

-------

Changes to /src:

Solution Wide: