@@ -26,7 +26,7 @@ namespace SharpArch.Core.DomainModel
             if (ReferenceEquals(this, compareTo))
                 return true;
 
-            return compareTo != null && GetType().Equals(compareTo.GetType()) &&
+            return compareTo != null && GetType().Equals(compareTo.GetTypeUnproxied()) &&
                 HasSameObjectSignatureAs(compareTo);
         }
 
@@ -103,6 +103,19 @@ namespace SharpArch.Core.DomainModel
 
             return (signaturePropertiesDictionary[GetType()] = GetTypeSpecificSignatureProperties());
         }
+
+        /// <summary>
+        /// When NHibernate proxies objects, it masks the type of the actual entity object.
+        /// This wrapper burrows into the proxied object to get its actual type.
+        /// 
+        /// Although this assumes NHibernate is being used, it doesn't require any NHibernate
+        /// related dependencies and has no bad side effects if NHibernate isn't being used.
+        /// 
+        /// Related discussion is at http://groups.google.com/group/sharp-architecture/browse_thread/thread/ddd05f9baede023a ...thanks Jay Oliver!
+        /// </summary>
+        protected virtual Type GetTypeUnproxied() {
+            return GetType();
+        } 
 
         /// <summary>
         /// Enforces the template method pattern to have child objects determine which specific 
